--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,3 +121,42 @@ body
 	text-decoration: none;
 	color: #FA9400;
   }
+
+  
+
+  /* Range */
+
+
+  .range {
+	-webkit-appearance: none;
+	width: 100%;
+	height: 15px;
+	border-radius: 5px;
+	background: #93909094;
+	outline: none;
+	opacity: 0.7;
+	-webkit-transition: .2s;
+	transition: opacity .2s;
+  }
+  
+  .range:hover {
+	opacity: 1;
+  }
+  
+  .range::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: #FA9400;
+	cursor: pointer;
+  }
+  
+  .range::-moz-range-thumb {
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: #FA9400;
+	cursor: pointer;
+  }
